[package]
name = "macro-time"
version = "0.1.0"
authors = ["Thrashm <thrashm@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
proccers = { path = "../proc-macro" }
stuff = { path = "../stuff" }