[package]
name = "proccers"
version = "0.1.0"
authors = ["Thrashm <thrashm@github.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
trybuild = "1.0.30"

[dependencies]
syn = { version = "1.0.34", features = ["extra-traits"] }
quote = "1.0.7"
stuff = { path = "../stuff" }